--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "firebase": "^3.7.3",
     "howler": "^2.0.1",
     "request": "^2.81.0",
-    "vue": "^2.2.6",
+    "vue": "^3.3.4",
+    "@vue/compat": "^3.3.4",
     "vue-router": "^2.3.1",
     "vuex": "^2.2.1",
     "vuex-router-sync": "^4.1.2"
@@ -86,7 +87,6 @@
     "uuid": "^3.1.0",
     "vue-loader": "^11.3.4",
     "vue-style-loader": "^2.0.5",
-    "vue-template-compiler": "^2.2.6",
     "webpack": "^2.3.3",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
