--- a/package.json
+++ b/package.json
@@ -15,26 +15,35 @@
     "test": "npm run e2e && npm run bundlesize"
   },
   "dependencies": {
+    "@vue/compat": "^3.3.4",
     "es6-promise": "^4.1.0",
     "firebase": "^3.7.3",
     "howler": "^2.0.1",
     "request": "^2.81.0",
     "vue": "^3.3.4",
-    "@vue/compat": "^3.3.4",
     "vue-router": "^2.3.1",
     "vuex": "^2.2.1",
     "vuex-router-sync": "^4.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime-corejs2": "^7.22.5",
     "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.0",
     "babel-plugin-istanbul": "^4.1.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
     "bundlesize": "^0.7.1",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
@@ -47,7 +56,7 @@
     "eslint": "^3.19.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.7",
-    "eslint-loader": "^1.7.1",
+    "eslint-loader": "^4.0.0",
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
@@ -57,7 +66,7 @@
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "gulp": "^3.9.1",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^4",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
     "karma": "^1.4.1",
@@ -85,9 +94,9 @@
     "sw-precache": "^4.2.1",
     "url-loader": "^0.5.8",
     "uuid": "^3.1.0",
-    "vue-loader": "^11.3.4",
+    "vue-loader": "^16.0.0",
     "vue-style-loader": "^2.0.5",
-    "webpack": "^2.3.3",
+    "webpack": "^4.1.0",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
