--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "howler": "^2.2.3",
     "request": "^2.81.0",
     "vue": "^3.3.4",
-    "vue-router": "^2.3.1",
-    "vuex": "^2.2.1",
-    "vuex-router-sync": "^4.1.2"
+    "vue-router": "^4.2.2,",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
